syntax = "proto3";

message Empty {}

message Username {
  string value = 1;
}

message UsernameBatch {
  repeated Username usernames = 1;
}

message MessageId {
  string value = 1;
}

message MessageIdBatch {
  repeated MessageId ids = 1;
}

message Topic {
  string value = 1;
  bool wildcard = 2;
}

message TopicBatch {
  repeated Topic topics = 1;
}

message Content {
  string value = 1;
}

message Data {
  bytes value = 1;
}

message Timestamp {
  int64 value = 1;
}

message Message {
  MessageId id = 1;
  Timestamp timestamp = 2;
  Username username = 3;
  Topic topic = 4;
  Content content = 5;
  Data data = 6;
}

message MessageBatch {
  repeated Message messages = 1;
}

message Subscription {
  SubscriptionId id = 1;
  Timestamp timestamp = 2;
  Username username = 3;
  Topic topic = 4;
}

message SubscriptionId {
  string value = 1;
}

message SubscribeRequest {
  Username username = 1;
  Topic topic = 2;
}

service Messenger {
  rpc StoreMessage(Message) returns (Empty);
  rpc Store(MessageBatch) returns (Empty);
  rpc RetrieveMessage(MessageId) returns (Message);
  rpc RetrieveMessages(MessageIdBatch) returns (MessageBatch);
  rpc DeleteMessage(MessageId) returns (Empty);
  rpc DeleteMessages(MessageIdBatch) returns (Empty);
  rpc Subscribe(SubscribeRequest) returns (TopicBatch);
  rpc Unsubscribe(SubscribeRequest) returns (TopicBatch);
  rpc ListUser(Empty) returns (UsernameBatch);
  rpc ListTopic(Empty) returns (TopicBatch);
  rpc ListTopicByUser(Username) returns (TopicBatch);
  rpc ListSubscriber(Topic) returns (UsernameBatch);
  rpc ListMessageByUser(Username) returns (MessageIdBatch);
  rpc ListMessageByTopic(Topic) returns (MessageIdBatch);
}


